1.3.3 (unreleased)
=====
* Only set calculated code for debit_invoice if not set, yet.
* Fix debit invoice still showing up in list of open invoices after payment
  by ESR.
* Tabular design for time saldo overview in payslip.
* Include saldo from previous month in time saldo in payslip.
* No filter sidebars in employees when current month has no activities.
* Don't show salaries as invoices tab for employees.
* Hide invoices tabs if empty in employee view.

1.3.2
=====
Tracking expenses with VAT got much, much easier. We've built a custom
form helping you to enter all those retailer recipes quickly.

Some bugfixes and the possibility to specify since when timesheets
should calculate the saldo for employees also made it into this release.

To support you setting up your own instance, join us on the following
channels:
* IRC:         freenode.net #bookyt
* Mailinglist: http://groups.google.com/group/bookyt
* Mail:        info@cyt.ch

Other notable changes:
* Fix invoice filter in people view.
* Include account code in account comboboxes in booking forms.

1.3.1
=====
We've given the timetracking module some love: filters in lists,
clever forms to do batch entries, nicer timelog. Directly printing
pages and reports in the browser now works great even in tabbed views.
Better view and form headings quickly tell you what you look at.
The salary pay slips had a major bugfix regarding bad rounding.

We have some great news for developers, too: We're working hard to
make contributing easy: some new helpers simplify
building new views; using great gems like inherited_resources make
controllers simple to understand, adapt, and build.

Of course our code is available commit by commit as soon as we code
it at https://github.com/huerlisi/bookyt.

Other bugfixes:
* Fix page header if not logged in
* Salary items show badly rounded amount in pay slip
* Invoice update sometimes fails validation for no obvious reason
* Fix projects creation
* Password reminder form has bad style